--- a/HMM Tagger.ipynb
+++ b/HMM Tagger.ipynb
@@ -10,11 +10,15 @@
     "\n",
     "Part of speech tagging is the process of determining the syntactic category of a word from the words in its surrounding context. It is often used to help disambiguate natural language phrases because it can be done quickly with high accuracy. Tagging can be used for many NLP tasks like determining correct pronunciation during speech synthesis (for example, _dis_-count as a noun vs dis-_count_ as a verb), for information retrieval, and for word sense disambiguation.\n",
     "\n",
-    "In this notebook, you'll use the [Pomegranate](http://pomegranate.readthedocs.io/) library to build a hidden Markov model for part of speech tagging using a \"universal\" tagset. Hidden Markov models have been able to achieve [>96% tag accuracy with larger tagsets on realistic text corpora](http://www.coli.uni-saarland.de/~thorsten/publications/Brants-ANLP00.pdf). Hidden Markov models have also been used for speech recognition and speech generation, machine translation, gene recognition for bioinformatics, and human gesture recognition for computer vision, and more. \n",
+    "In this homework, you'll use the [Pomegranate](http://pomegranate.readthedocs.io/) library to build a hidden Markov model for part of speech tagging using a \"universal\" tagset. Hidden Markov models have been able to achieve [>96% tag accuracy with larger tagsets on realistic text corpora](http://www.coli.uni-saarland.de/~thorsten/publications/Brants-ANLP00.pdf). Hidden Markov models have also been used for speech recognition and speech generation, machine translation, gene recognition for bioinformatics, and human gesture recognition for computer vision, and more. \n",
     "\n",
-    "![](_post-hmm.png)\n",
+    "![](img/_post-hmm.png)\n",
     "\n",
-    "The notebook already contains some code to get you started. You only need to add some new functionality in the areas indicated to complete the project; you will not need to modify the included code beyond what is requested. Sections that begin with **'IMPLEMENTATION'** in the header indicate that you must provide code in the block that follows. Instructions will be provided for each section, and the specifics of the implementation are marked in the code block with a 'TODO' statement. Please be sure to read the instructions carefully!"
+    "This notebook already contains some code to get you started. You only need to add some new functionality in the areas indicated to complete the project; you will not need to modify the included code beyond what is requested. \n",
+    "\n",
+    "Sections that begin with **'IMPLEMENTATION'** in the header indicate that you must provide code in the block that follows. Instructions will be provided for each section, and the specifics of the implementation are marked in the code block with a 'TODO' statement. \n",
+    "\n",
+    "Please make sure to read the instructions carefully!"
    ]
   },
   {
@@ -30,53 +34,66 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div class=\"alert alert-block alert-info\">\n",
-    "**Note:** Code and Markdown cells can be executed using the `Shift + Enter` keyboard shortcut. Markdown cells can be edited by double-clicking the cell to enter edit mode.\n",
-    "</div>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "### The Road Ahead\n",
-    "You must complete Steps 1-3 below to pass the project. The section on Step 4 includes references & resources you can use to further explore HMM taggers.\n",
+    "You must complete Steps 1-3 below to pass the project.\n",
     "\n",
     "- [Step 1](#Step-1:-Read-and-preprocess-the-dataset): Review the provided interface to load and access the text corpus\n",
-    "- [Step 2](#Step-2:-Build-a-Most-Frequent-Class-tagger): Build a Most Frequent Class tagger to use as a baseline\n",
-    "- [Step 3](#Step-3:-Build-an-HMM-tagger): Build an HMM Part of Speech tagger and compare to the MFC baseline\n",
-    "- [Step 4](#Step-4:-[Optional]-Improving-model-performance): (Optional) Improve the HMM tagger"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<div class=\"alert alert-block alert-warning\">\n",
-    "**Note:** Make sure you have selected a **Python 3** kernel in Workspaces or the hmm-tagger conda environment if you are running the Jupyter server on your own machine.\n",
-    "</div>"
+    "- [Step 2](#Step-2:-Build-a-Most-Frequent-Class-tagger): Build a Most Frequent Class (MFC) tagger to use as a baseline\n",
+    "- [Step 3](#Step-3:-Build-an-HMM-tagger): Build an HMM Part of Speech tagger and compare to the MFC baseline"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "# Jupyter \"magic methods\" -- only need to be run once per kernel restart\n",
     "%load_ext autoreload\n",
-    "%aimport helpers, tests\n",
+    "# %aimport helpers, tests\n",
     "%autoreload 1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting pomegranate\n",
+      "  Downloading pomegranate-0.13.4-cp37-cp37m-macosx_10_9_x86_64.whl (5.4 MB)\n",
+      "\u001b[K     |████████████████████████████████| 5.4 MB 1.6 MB/s eta 0:00:01\n",
+      "\u001b[?25hRequirement already satisfied: numpy>=1.8.0 in /Users/hbouamor/opt/anaconda3/lib/python3.7/site-packages (from pomegranate) (1.18.1)\n",
+      "Requirement already satisfied: joblib>=0.9.0b4 in /Users/hbouamor/opt/anaconda3/lib/python3.7/site-packages (from pomegranate) (0.14.1)\n",
+      "Requirement already satisfied: scipy>=0.17.0 in /Users/hbouamor/opt/anaconda3/lib/python3.7/site-packages (from pomegranate) (1.4.1)\n",
+      "Requirement already satisfied: pyyaml in /Users/hbouamor/opt/anaconda3/lib/python3.7/site-packages (from pomegranate) (5.3)\n",
+      "Requirement already satisfied: networkx>=2.0 in /Users/hbouamor/opt/anaconda3/lib/python3.7/site-packages (from pomegranate) (2.4)\n",
+      "Requirement already satisfied: decorator>=4.3.0 in /Users/hbouamor/opt/anaconda3/lib/python3.7/site-packages (from networkx>=2.0->pomegranate) (4.4.1)\n",
+      "Installing collected packages: pomegranate\n",
+      "Successfully installed pomegranate-0.13.4\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip install pomegranate"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# import python modules -- this cell needs to be run again if you make changes to any of the files\n",
@@ -117,11 +134,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "There are 57340 sentences in the corpus.\n",
+      "There are 45872 sentences in the training set.\n",
+      "There are 11468 sentences in the testing set.\n"
+     ]
+    }
+   ],
    "source": [
     "data = Dataset(\"tags-universal.txt\", \"brown-universal.txt\", train_test_split=0.8)\n",
     "\n",
@@ -189,11 +214,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sentence: b100-38532\n",
+      "words:\n",
+      "\t('Perhaps', 'it', 'was', 'right', ';', ';')\n",
+      "tags:\n",
+      "\t('ADV', 'PRON', 'VERB', 'ADJ', '.', '.')\n"
+     ]
+    }
+   ],
    "source": [
     "key = 'b100-38532'\n",
     "print(\"Sentence: {}\".format(key))\n",
@@ -216,11 +251,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "There are a total of 1161192 samples of 56057 unique words in the corpus.\n",
+      "There are 928458 samples of 50536 unique words in the training set.\n",
+      "There are 232734 samples of 25112 unique words in the testing set.\n",
+      "There are 5521 words in the test set that are missing in the training set.\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"There are a total of {} samples of {} unique words in the corpus.\"\n",
     "      .format(data.N, len(data.vocab)))\n",
@@ -245,11 +289,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sentence 1: ('Mr.', 'Podger', 'had', 'thanked', 'him', 'gravely', ',', 'and', 'now', 'he', 'made', 'use', 'of', 'the', 'advice', '.')\n",
+      "\n",
+      "Labels 1: ('NOUN', 'NOUN', 'VERB', 'VERB', 'PRON', 'ADV', '.', 'CONJ', 'ADV', 'PRON', 'VERB', 'NOUN', 'ADP', 'DET', 'NOUN', '.')\n",
+      "\n",
+      "Sentence 2: ('But', 'there', 'seemed', 'to', 'be', 'some', 'difference', 'of', 'opinion', 'as', 'to', 'how', 'far', 'the', 'board', 'should', 'go', ',', 'and', 'whose', 'advice', 'it', 'should', 'follow', '.')\n",
+      "\n",
+      "Labels 2: ('CONJ', 'PRT', 'VERB', 'PRT', 'VERB', 'DET', 'NOUN', 'ADP', 'NOUN', 'ADP', 'ADP', 'ADV', 'ADV', 'DET', 'NOUN', 'VERB', 'VERB', '.', 'CONJ', 'DET', 'NOUN', 'PRON', 'VERB', 'VERB', '.')\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# accessing words with Dataset.X and tags with Dataset.Y \n",
     "for i in range(2):    \n",
@@ -269,11 +326,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Stream (word, tag) pairs:\n",
+      "\n",
+      "\t ('Mr.', 'NOUN')\n",
+      "\t ('Podger', 'NOUN')\n",
+      "\t ('had', 'VERB')\n",
+      "\t ('thanked', 'VERB')\n",
+      "\t ('him', 'PRON')\n",
+      "\t ('gravely', 'ADV')\n",
+      "\t (',', '.')\n"
+     ]
+    }
+   ],
    "source": [
     "# use Dataset.stream() (word, tag) samples for the entire corpus\n",
     "print(\"\\nStream (word, tag) pairs:\\n\")\n",
@@ -864,7 +936,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
